Fix visibility to avoid ghost clickable links

--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,7 @@ header {
     height: 0;
     opacity: 0;
     padding: 0;
+    visibility: hidden;
 }
 
 .links .link-item .icon {
